#2250: - updated GlobalToolCommandletTest to verify uninstall via package manager commands - added CapturingProcessContextTest to capture uninstall commands before execution and allow assertions without executing the actual commands